syntax = "proto3";
option java_package = "com.tlyong.grpc.examples.demo";
option java_outer_classname = "DemoProto";
option objc_class_prefix = "Grpctest";

package demo;

service DemoService {
    rpc login (LoginRequest) returns (LoginResponse) {
    }
}

message LoginRequest {
    string userName = 1;
    string password = 2;
}

message LoginResponse {
    string msg = 1;
}